# kilter_brain

./: .gitignore  Cargo.toml  Makefile.toml  README.md  minimal.json
.github/workflows/: ci.yaml  publish.yaml
mobile/: .gitignore  Cargo.toml  Makefile  build_rust_deps.sh  manifest.yaml
mobile/ios-src/: Info.plist
mobile/mobile.xcodeproj/: project.pbxproj
mobile/mobile.xcodeproj/xcshareddata/xcschemes/: mobile.xcscheme
mobile/src/: lib.rs  main.rs
src/: authoring.rs  button.rs  debug.rs  font.rs  gen_api.rs  human.rs  kilter_board.rs  kilter_data.rs  lib.rs  main.rs  native_clipboard.rs  palette.rs  pan_cam.rs  panels.rs  placement_indicator.rs  theme.rs  wasm_clipboard.rs
src/clipboard/: mod.rs  native_clipboard.rs  wasm_clipboard.rs
src/ui/: action_panel.rs  board_panel.rs  button.rs  font.rs  info_panel.rs  mod.rs  nav_panel.rs  net_panel.rs  search_panel.rs  theme.rs
wasm/: index.html
