[package]
name = "kilter_brain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23"
combine = "4.6.6"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clipboard = "0.5.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = [
    "Element",
    "Document",
    "Window",
    "Clipboard",
    "ClipboardEvent",
    "DataTransfer",
] }
wasm-bindgen = "*"
gloo-events = "0.1"
futures = "0.3"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
