[package]
name = "kilter_brain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14" }
bevy-inspector-egui = "0.25"
bevy_http_client = "0.6"
bevy_mod_picking = { version = "0.20", features = ["backend_egui"] }
combine = "4.6.6"
indexmap = "2.2.6"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
uuid = "*"

# Disable low-severity logs at compile time for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clipboard = "0.5.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = [
    "Element",
    "Document",
    "Window",
    "Clipboard",
    "ClipboardEvent",
    "DataTransfer",
] }
wasm-bindgen = "*"
gloo-events = "0.1"
futures = "0.3"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.web-dist]
inherits = "dist"
opt-level = "s"
