[package]
name = "kilter_brain"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["mobile"]

[dependencies]
bevy = { version = "0.14" }
bevy-inspector-egui = "0.26"
bevy_http_client = "0.6"
# Use this PR temporarily. `bevy_egui` 0.28 seems to no longer work on wasm.
bevy_mod_picking = { git = "https://github.com/no-materials/bevy_mod_picking.git", branch = "bump-bevy-egui", features = [
    "backend_egui",
] }
combine = "4.6.6"
indexmap = "2.2.6"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
uuid = "*"

# Disable low-severity logs at compile time for performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
webbrowser = "1.0.1"
bevy_simple_text_input = "0.9.2"

[target.'cfg(not(any(target_arch = "wasm32", target_os="android", target_os="ios")))'.dependencies]
clipboard = "0.5.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = [
    "Element",
    "Document",
    "Window",
    "Clipboard",
    "ClipboardEvent",
    "DataTransfer",
] }
wasm-bindgen = "*"
gloo-events = "0.1"
futures = "0.3"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

[profile.web-dist]
inherits = "dist"
opt-level = "s"
