[package]
name = "mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mobile"
crate-type = ["lib", "cdylib"]

[dependencies]
kilter_brain = { path = ".." }
bevy = { version = "0.16", default-features = false }

[package.metadata.android]
package = "com.rparrett.kilterbrain"
apk_name = "KilterBrain"                  # ToDo same as GAME_OSX_APP_NAME in release workflow
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 33

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Kilter Brain"
